--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   padding-top: 5%;
 }
@@ -30,6 +30,12 @@
   font-weight: 400;
   color: red;
   text-transform: capitalize;
+}
+
+@media (min-width: 480px) {
+  .container {
+    width: 80%;
+  }
 }
 
 @media (min-width: 768px) {
